--- a/MonBaluchon/View/Base.lproj/Main.storyboard
+++ b/MonBaluchon/View/Base.lproj/Main.storyboard
@@ -230,24 +230,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="cqu-iL-7ft">
-                                <rect key="frame" x="20" y="20" width="374" height="34"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="34" id="Ge6-At-gN5"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" textContentType="password"/>
-                                <connections>
-                                    <outlet property="delegate" destination="JoN-AT-WME" id="l4v-KD-L3i"/>
-                                </connections>
-                            </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g4K-iw-UwO">
                                 <rect key="frame" x="20" y="328" width="374" height="80"/>
                                 <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="80" id="SR1-M1-52u"/>
                                 </constraints>
-                                <state key="normal" title="Nouveau cours">
+                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                                <state key="normal" title="CHANGE">
                                     <color key="titleColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <userDefinedRuntimeAttributes>
@@ -262,42 +252,22 @@
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="DOI-KZ-lLN">
                                 <rect key="frame" x="188.66666666666666" y="349.66666666666669" width="37" height="37"/>
                             </activityIndicatorView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E0T-uq-mnX">
-                                <rect key="frame" x="20" y="521" width="374" height="30"/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="z2K-0d-vfF"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KVj-jE-6ge">
-                                <rect key="frame" x="20" y="576" width="374" height="30"/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="ipi-eM-ur0"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="EUR" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aLj-OV-dBe">
-                                <rect key="frame" x="104.33333333333333" y="105" width="32.666666666666671" height="20.333333333333329"/>
+                                <rect key="frame" x="104.33333333333333" y="92" width="32.666666666666671" height="20.333333333333329"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="PnA-Zx-Bod">
-                                <rect key="frame" x="20" y="141.33333333333334" width="117" height="34"/>
+                                <rect key="frame" x="20" y="128.33333333333334" width="117" height="34"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="34" id="EUX-0Z-IBh"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                             </textField>
                             <pickerView contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="uxw-IY-9cu">
-                                <rect key="frame" x="157" y="105" width="100" height="203"/>
+                                <rect key="frame" x="157" y="92" width="100" height="216"/>
                                 <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <gestureRecognizers/>
@@ -316,19 +286,34 @@
                                 </connections>
                             </pickerView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Currency" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3PT-V0-Z1w">
-                                <rect key="frame" x="277" y="105" width="70" height="20.333333333333329"/>
+                                <rect key="frame" x="277" y="92" width="70" height="20.333333333333329"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="PRw-zp-D7W">
-                                <rect key="frame" x="277" y="141.33333333333334" width="117" height="34"/>
+                                <rect key="frame" x="277" y="128.33333333333334" width="117" height="34"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="34" id="Q7U-1V-RMV"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                             </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sZt-Qm-l1b">
+                                <rect key="frame" x="277" y="182.33333333333334" width="117" height="70"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="70" id="qs2-kP-aXq"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="10"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="y6O-lk-OnC"/>
                         <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -337,32 +322,25 @@
                             <constraint firstItem="uxw-IY-9cu" firstAttribute="leading" secondItem="PnA-Zx-Bod" secondAttribute="trailing" constant="20" id="0uA-26-K5f"/>
                             <constraint firstItem="aLj-OV-dBe" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="y6O-lk-OnC" secondAttribute="leading" symbolic="YES" id="7z7-af-lcg"/>
                             <constraint firstItem="PRw-zp-D7W" firstAttribute="leading" secondItem="uxw-IY-9cu" secondAttribute="trailing" constant="20" id="9W8-gh-8Io"/>
+                            <constraint firstItem="sZt-Qm-l1b" firstAttribute="width" secondItem="PRw-zp-D7W" secondAttribute="width" id="D20-h3-xBM"/>
                             <constraint firstItem="PnA-Zx-Bod" firstAttribute="leading" secondItem="y6O-lk-OnC" secondAttribute="leading" constant="20" id="GGo-Vr-hch"/>
                             <constraint firstItem="uxw-IY-9cu" firstAttribute="centerX" secondItem="012-7C-aBH" secondAttribute="centerX" id="IGV-Lo-9pn"/>
                             <constraint firstItem="3PT-V0-Z1w" firstAttribute="leading" secondItem="uxw-IY-9cu" secondAttribute="trailing" constant="20" id="M4O-Q1-I0g"/>
-                            <constraint firstItem="uxw-IY-9cu" firstAttribute="top" secondItem="cqu-iL-7ft" secondAttribute="bottom" constant="51" id="ODX-Zt-ugl"/>
                             <constraint firstItem="g4K-iw-UwO" firstAttribute="leading" secondItem="y6O-lk-OnC" secondAttribute="leading" constant="20" id="Scq-7V-QZK"/>
-                            <constraint firstItem="KVj-jE-6ge" firstAttribute="top" secondItem="E0T-uq-mnX" secondAttribute="bottom" constant="25" id="TSm-xp-phk"/>
-                            <constraint firstItem="E0T-uq-mnX" firstAttribute="leading" secondItem="y6O-lk-OnC" secondAttribute="leading" constant="20" id="WEP-QJ-p4m"/>
-                            <constraint firstItem="y6O-lk-OnC" firstAttribute="trailing" secondItem="E0T-uq-mnX" secondAttribute="trailing" constant="20" id="WSH-cG-g8k"/>
                             <constraint firstItem="uxw-IY-9cu" firstAttribute="leading" secondItem="aLj-OV-dBe" secondAttribute="trailing" constant="20" id="WjB-lo-sjv"/>
                             <constraint firstItem="g4K-iw-UwO" firstAttribute="centerY" secondItem="012-7C-aBH" secondAttribute="centerY" id="YQc-IA-I7w"/>
                             <constraint firstItem="y6O-lk-OnC" firstAttribute="trailing" secondItem="PRw-zp-D7W" secondAttribute="trailing" constant="20" id="aGg-pu-vFu"/>
                             <constraint firstItem="DOI-KZ-lLN" firstAttribute="centerY" secondItem="012-7C-aBH" secondAttribute="centerY" id="bJf-HQ-ELd"/>
-                            <constraint firstItem="cqu-iL-7ft" firstAttribute="top" secondItem="y6O-lk-OnC" secondAttribute="top" constant="20" id="dER-3G-G5c"/>
-                            <constraint firstItem="E0T-uq-mnX" firstAttribute="top" secondItem="g4K-iw-UwO" secondAttribute="bottom" constant="113" id="efO-l6-tLW"/>
-                            <constraint firstItem="y6O-lk-OnC" firstAttribute="trailing" secondItem="cqu-iL-7ft" secondAttribute="trailing" constant="20" id="fm9-CC-q1k"/>
                             <constraint firstItem="PnA-Zx-Bod" firstAttribute="top" secondItem="aLj-OV-dBe" secondAttribute="bottom" constant="16" id="h3h-0G-v46"/>
-                            <constraint firstItem="cqu-iL-7ft" firstAttribute="leading" secondItem="y6O-lk-OnC" secondAttribute="leading" constant="20" id="j1T-X0-AM7"/>
                             <constraint firstItem="PRw-zp-D7W" firstAttribute="top" secondItem="3PT-V0-Z1w" secondAttribute="bottom" constant="16" id="lSA-Xr-IQR"/>
                             <constraint firstItem="y6O-lk-OnC" firstAttribute="trailing" secondItem="g4K-iw-UwO" secondAttribute="trailing" constant="20" id="mO4-sw-X9A"/>
-                            <constraint firstItem="y6O-lk-OnC" firstAttribute="trailing" secondItem="KVj-jE-6ge" secondAttribute="trailing" constant="20" id="mhh-BK-mF8"/>
                             <constraint firstItem="3PT-V0-Z1w" firstAttribute="top" secondItem="aLj-OV-dBe" secondAttribute="top" id="o7D-Qf-fLM"/>
                             <constraint firstItem="g4K-iw-UwO" firstAttribute="top" secondItem="uxw-IY-9cu" secondAttribute="bottom" constant="20" id="qfw-kI-pfL"/>
+                            <constraint firstItem="sZt-Qm-l1b" firstAttribute="leading" secondItem="PRw-zp-D7W" secondAttribute="leading" id="sTA-eh-S6z"/>
                             <constraint firstItem="y6O-lk-OnC" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="3PT-V0-Z1w" secondAttribute="trailing" symbolic="YES" id="siB-Vw-TIy"/>
                             <constraint firstItem="DOI-KZ-lLN" firstAttribute="centerX" secondItem="012-7C-aBH" secondAttribute="centerX" id="uN0-Oy-L82"/>
                             <constraint firstItem="uxw-IY-9cu" firstAttribute="top" secondItem="aLj-OV-dBe" secondAttribute="top" id="w3O-q1-NoO"/>
-                            <constraint firstItem="KVj-jE-6ge" firstAttribute="leading" secondItem="y6O-lk-OnC" secondAttribute="leading" constant="20" id="yQa-H7-CE0"/>
+                            <constraint firstItem="sZt-Qm-l1b" firstAttribute="top" secondItem="PRw-zp-D7W" secondAttribute="bottom" constant="20" id="wQ2-l9-d1i"/>
                         </constraints>
                         <connections>
                             <outletCollection property="gestureRecognizers" destination="2A9-3W-JmX" appends="YES" id="2hs-ll-Mfk"/>
@@ -373,11 +351,9 @@
                         <outlet property="LabelCurrency" destination="3PT-V0-Z1w" id="uA7-XM-twE"/>
                         <outlet property="activityIndicator" destination="DOI-KZ-lLN" id="T5D-qx-fBT"/>
                         <outlet property="buttonCurrency" destination="g4K-iw-UwO" id="a87-05-rnT"/>
+                        <outlet property="course" destination="sZt-Qm-l1b" id="Cu5-Ts-TU3"/>
                         <outlet property="currencyPickerView" destination="uxw-IY-9cu" id="H2y-hH-OGs"/>
-                        <outlet property="password" destination="cqu-iL-7ft" id="FGQ-0Z-8h4"/>
-                        <outlet property="result" destination="E0T-uq-mnX" id="b28-iB-9jg"/>
                         <outlet property="resultOfConversion" destination="PRw-zp-D7W" id="5rQ-gO-TDT"/>
-                        <outlet property="reverse" destination="KVj-jE-6ge" id="CnZ-Ee-IsL"/>
                         <outlet property="sumEURToConvert" destination="PnA-Zx-Bod" id="zDt-Eq-OC4"/>
                     </connections>
                 </viewController>
